登録およびログインにおけるAPIレスポンスを変更
