# controllers/response.go
@@ -1,0 +1,5 @@
+package controllers
+
+type AuthResponse struct {
+	AccessToken string `json:"accessToken"`
+}
